<resources>
    <string name="app_name">Ngo_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open">nav open</string>
    <string name="nav_close">nav close</string>
    <string name="title_activity_staring_splash">staring_splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="default_web_client_id">238381651617-o7hbbaa04dtorl0ifclr03c8cfcbkc74.apps.googleusercontent.com</string>
    <string name="adoption_form_about">"Welcome to our official adoption portal. Your decision to explore adoption as a means of expanding your family is commendable. We provide a structured process to facilitate the adoption of children into caring and supportive homes.

To initiate the adoption procedure, please proceed by accessing our adoption form. This form is meticulously designed to collect necessary information from prospective adoptive parents. Your responses will assist us in assessing suitability for adoption and aid in matching children with loving families.

By clicking the button below, you will be directed to the official adoption form. Please complete all fields accurately and truthfully. All information shared will be handled confidentially and used exclusively for adoption-related assessments and processes.

Thank you for considering adoption and for taking this initial step in providing a nurturing environment for a child in need. Your commitment to this process may profoundly impact the life of a child and fulfill the promise of a better future."</string>

    <string name="about_us_motive">
        At our Ngo, our driving force is the unwavering commitment to nurturing brighter futures for children in need. We passionately advocate for the well-being and rights of vulnerable children, striving to create a world where every child feels secure, loved, and empowered.
    </string>

    <string name="about_us_mission">
        Our mission is to facilitate the adoption process, support child welfare initiatives, and provide essential resources for both children in need and prospective adoptive families. We work tirelessly to streamline adoption procedures, encourage financial contributions, and foster a supportive environment for those involved in child welfare and adoption endeavors.
    </string>

    <string name="about_us_services">
        In our comprehensive application, we extend the invaluable service of facilitating child adoption requests, providing individuals with a seamless avenue to initiate the noble process of adoption. Moreover, our platform boasts a dedicated donation page, empowering users to make meaningful contributions, thereby supporting and advancing the initiatives undertaken by our esteemed NGO.
    </string>

    <string name="guide_registration">
        1) To access the application, users will need to log in using their email address.\n2) On the login screen enter the required credentials.
    </string>

    <string name="guide_adoption_request">
        1) After successful login, navigate to the adoption request section in the app\'s menu.\n2) Complete the adoption request form by providing personal information: date of birth, marital status, occupation, permanent address, and child preferences (gender, age group).\n3) Submit the form and await an email notification regarding the admin\'s decision on the adoption request.
    </string>

    <string name="guide_make_donation">
        1) Access the donation page within the app\'s designated section.\n2) Choose the preferred donation amount or enter a custom donation value.\n3) Complete the donation securely using the provided payment method options.
    </string>
    <string name="verification_text">A verification email has been sent to your email address. \n\nPlease check your inbox and follow the instructions to verify your email. \n \nAfter verification is complete, please wait for a moment. </string>
    <string name="display_text1">Please complete the child adoption form with all required details and submit the request for adoption.</string>

    <string name="donate_page_text">Making a donation is a noble act of generosity and kindness. Every contribution, no matter the amount, is highly valuable and helps us create a better future for children in need. Your donation will make a significant impact and earn you a special place in our mission to support and nurture young lives.\n\n
We encourage you to start your donation today, with a minimum contribution of just ₹50. Together, we can bring about positive change and provide the resources and care that these children deserve.
\n\n
Thank you for your support and compassion.</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="marital_status">
        <item>Married</item>
        <item>Unmarried</item>
        <item>Divorced</item>
        <item>Widow</item>
        <item>Widower</item>
    </string-array>

    <string-array name="child_age_group">
        <item>0-3 years old</item>
        <item>3-6 years old</item>
        <item>6-9 years old</item>
        <item>9-12 years old</item>
        <item>12-15 years old</item>
        <item>15-18 years old</item>
    </string-array>
</resources>


